# libusbmuxd

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  config.h.meson  configure.ac  libusbmuxd.pc.in  libusbmuxd.rc  libusbmuxd.vcproj  libusbmuxd.vs2013.vcproj  libusbmuxd.vs2013.vcxproj  libusbmuxd.vs2013.vcxproj.filters  meson.build  meson_options.txt  resource.h
.github/workflows/: build.yml  ccpp.yml  ci.yml
Xcode/: config.h
Xcode/libusbmuxd.xcodeproj/: project.pbxproj
Xcode/libusbmuxd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/libusbmuxd.xcodeproj/project.xcworkspace/xcshareddata/: libusbmuxd.xccheckout  libusbmuxd.xcscmblueprint
Xcode/libusbmuxd.xcodeproj/project.xcworkspace/xcuserdata/olunx.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/libusbmuxd.xcodeproj/xcuserdata/olunx.xcuserdatad/xcschemes/: libusbmuxd.xcscheme  xcschememanagement.plist
common/: Makefile.am  collection.c  collection.h  meson.build  socket.c  socket.h  thread.c
docs/: inetcat.1  iproxy.1
include/: config.h  usbmuxd-proto.h  usbmuxd.h
src/: Makefile.am  collection.c  collection.h  libusbmuxd-2.0.pc.in  libusbmuxd.c  meson.build  msc_config.h  socket.c  socket.h
tools/: Makefile.am  icat.c  inetcat.c  iproxy.c  meson.build  usbmuxinfo  usbmuxinfo.c  usbmuxscan  usbmuxscan.c
utils/: Makefile.am  collection.c
